fixed vertical spacing on landing hero

--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -14,7 +14,7 @@
         min-height: 100vh; 
 
         .hero-body {
-            padding-bottom: 1rem;
+            padding-bottom: 0;
         }
 
         .title {
